adding styles.css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<style type="text/css"></style>
+	<link rel="stylesheet" type="text/css" href="https://rutujachachane.github.io/css/styles.css">
 </head>
 <body>
 <h1>hii rutuja</h1>
 </body>
 </html>
+
