--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<style type="text/css"></style>
-	<link rel="stylesheet" type="text/css" href="https://rutujachachane.github.io/css/styles.css">
+	
+	 <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Module2 Assignment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="mod2_solution.css">
 </head>
 <body>
-<h1>hii rutuja</h1>
+<h1>Our Menu</h1>
+
+	<div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+
+		<section class="Chiken">
+			<h2 id="sk">Chiken</h2>
+			<ul>
+	<li>Chicken is the most common type of poultry in the world.</li>
+	<li>  chickens have become prevalent throughout the cuisine of cultures around the world</li>
+	 <li>their meat has been variously adapted to regional tastes.</li>
+</ul>
+        </section>
+   </div>
+
+    <div class="col-lg-4 col-md-6 col-sm-12">
+		<section class="Beef">
+			<h2 id="rk">Beef</h2>
+			<ul>
+	<li>Beef is the culinary name for meat from cattle, particularly skeletal muscle. </li>
+	<li>Humans have been eating beef since prehistoric times. </li>
+	<li>Beef is a source of high-quality protein and nutrients.<li>
+	</ul>
+	    </section>
+	
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12">
+	    <section class="Sushi">
+	    	<h2 id="mk">Sushi</h2>
+	    	<ul>
+	<li>Sushi is a Japanese dish of prepared vinegared rice</li>
+	<li>usually with some sugar and salt, </li>
+	<li>accompanying a variety of ingredients, such as seafood, vegetables, and occasionally tropical fruits.</li>
+</ul>
+        </section>
+    </div>
+	
+
+</div>
 </body>
 </html>
-
