--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<ul>
 	<li>Beef is the culinary name for meat from cattle, particularly skeletal muscle. </li>
 	<li>Humans have been eating beef since prehistoric times. </li>
-	<li>Beef is a source of high-quality protein and nutrients.<li>
+	<li>Beef is a source of high-quality protein and nutrients.</li>
 	</ul>
 	    </section>
 	
